# tcc

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-sft.txt  requirements.txt
config/: backends.yaml.example  default.yaml  local.yaml.example
docs/: stack.md
scripts/: build_vector_db.py  download_data.py  download_model.py  finetune.py  infer.py  ollama_import.py  run_model.py  setup_llama_cpp.py  setup_project.py  worfeval.py
src/tcc/: __init__.py  config.py  models_registry.py  paths.py  run_stamp.py  scenarios.py
src/tcc/backends/: __init__.py  gguf_convert.py  langchain_rag.py  ollama_inference.py  ollama_modelfile.py  unsloth_train.py
src/tcc/download/: __init__.py  models.py  worfbench_data.py
src/tcc/finetune/: dataset.py  qlora.py  sft.py  unsloth_sft.py
src/tcc/inference/: runner.py
src/tcc/pipeline/: __init__.py  model_pipeline.py  setup_pipeline.py  steps.py
src/tcc/pipelines/: __init__.py  evaluation.py  inference.py  sft.py
src/tcc/rag/: __init__.py  index.py  retriever.py  vector_store.py
src/tcc/setup/: __init__.py  worfbench_repo.py
src/tcc/worfeval/: eval_workflow.py  runner.py
tests/: conftest.py  test_gguf_convert.py  test_ollama_inference.py  test_pipeline.py  test_qlora.py  test_rag_last_turn.py  test_sft.py  test_vector_retriever.py  test_worfeval.py
