# Metadados e config de ferramentas (deps em requirements.txt).
[project]
name = "tcc-worfbench"
version = "0.1.0"
description = "Orquestração experimental — SLMs no WorFBench/WorFEval"
requires-python = ">=3.10,<3.13"

[tool.ruff.lint]
per-file-ignores = { "scripts/*.py" = ["E402"], "tests/test_qlora.py" = ["E402"] }
